--- a/src/package.json
+++ b/src/package.json
@@ -4,7 +4,9 @@
   "description": "Client API for Event Store v6 for NodeJS",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "pretest": "tsc test/*.ts --module commonjs",
+    "test": "mocha -r ts-node/register test/*.ts",
+    "build": "cp -r generated dist/generated/; tsc"
   },
   "repository": {
     "type": "git",
@@ -21,6 +23,16 @@
   },
   "homepage": "https://github.com/EventStore/EventStore-Client-NodeJS#readme",
   "devDependencies": {
-    "ts-protoc-gen": "^0.12.0"
+    "@types/google-protobuf": "^3.7.2",
+    "@types/mocha": "^5.2.7",
+    "mocha": "^6.2.2",
+    "ts-node": "^8.5.2",
+    "ts-protoc-gen": "^0.12.0",
+    "typescript": "^3.7.4"
+  },
+  "dependencies": {
+    "google-protobuf": "^3.10.0",
+    "grpc": "^1.24.2",
+    "uuid": "^3.3.3"
   }
 }
