--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Client API for Event Store v6 for NodeJS",
   "main": "index.js",
   "scripts": {
-    "pretest": "tsc test/*.ts --module commonjs",
+    "generate": "(cd scripts; bash ./generate-protos.sh)",
     "test": "npm run build; mocha -r ts-node/register test/*.ts",
-    "build": "cp -r generated dist/generated/; tsc"
+    "build": "npm run generate; tsc"
   },
   "repository": {
     "type": "git",
@@ -28,11 +28,11 @@
     "mocha": "^6.2.2",
     "ts-node": "^8.5.2",
     "ts-protoc-gen": "^0.12.0",
-    "typescript": "^3.7.4"
+    "typescript": "^3.7.4",
+    "uuid": "^3.3.3"
   },
   "dependencies": {
     "google-protobuf": "^3.10.0",
-    "grpc": "^1.24.2",
-    "uuid": "^3.3.3"
+    "grpc": "^1.24.2"
   }
 }
