--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,11 @@
     "target": "es5",
     "module": "commonjs",
     "declaration": true,
-    "outDir": "./dist",
     "strict": true
   },
   "exclude": [
+    "node_modules",
     "test",
-    "dist"
+    "src/generated"
   ]
 }
