--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
   },
   "dependencies": {
     "google-protobuf": "^3.10.0",
-    "grpc": "^1.24.2"
+    "grpc": "^1.24.3",
+    "grpc-tools": "^1.9.1",
+    "grpc_tools_node_protoc_ts": "^4.1.0"
   }
 }
