--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,8 @@
     "target": "es5",
     "module": "commonjs",
     "declaration": true,
-    "strict": true
+    "strict": true,
+    "outDir": "./dist"
   },
-  "exclude": [
-    "node_modules",
-    "test",
-    "src/generated"
-  ]
+  "include": ["./src", "./generated"]
 }
