--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./dist/index.js",
   "scripts": {
     "generate": "./scripts/build-protos.sh",
-    "test": "npm run build; mocha -r ts-node/register test/*.ts",
+    "test": "jest",
     "clean": "rm -rf ./dist",
     "build": "run-s generate build:*",
     "build:ts": "tsc"
@@ -28,6 +28,9 @@
     "url": "https://github.com/EventStore/EventStore-Client-NodeJS/issues"
   },
   "homepage": "https://github.com/EventStore/EventStore-Client-NodeJS#readme",
+  "jest": {
+    "preset": "ts-jest"
+  },
   "dependencies": {
     "@improbable-eng/grpc-web": "^0.13.0",
     "google-protobuf": "^3.10.0",
@@ -35,13 +38,18 @@
   },
   "devDependencies": {
     "@types/google-protobuf": "^3.7.2",
+    "@types/jest": "^26.0.5",
+    "@types/uuid": "^8.0.0",
     "@typescript-eslint/eslint-plugin": "^3.7.0",
     "@typescript-eslint/parser": "^3.7.0",
     "eslint": "^7.5.0",
     "grpc-tools": "^1.9.1",
+    "jest": "^26.1.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.5",
+    "ts-jest": "^26.1.3",
     "ts-protoc-gen": "^0.12.0",
-    "typescript": "^3.9.7"
+    "typescript": "^3.9.7",
+    "uuid": "^8.2.0"
   }
 }
