--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,5 +6,6 @@
     "strict": true,
     "outDir": "./dist"
   },
-  "include": ["./src", "./generated"]
+  "include": ["./src", "./generated"],
+  "exclude": ["**/*.test.ts"]
 }
