--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "grpc": "^1.24.3"
   },
   "devDependencies": {
+    "@improbable-eng/grpc-web-node-http-transport": "^0.13.0",
     "@types/google-protobuf": "^3.7.2",
     "@types/jest": "^26.0.5",
     "@types/uuid": "^8.0.0",
