--- a/package.json
+++ b/package.json
@@ -35,25 +35,24 @@
     "preset": "ts-jest"
   },
   "dependencies": {
-    "@improbable-eng/grpc-web": "^0.13.0",
-    "google-protobuf": "^3.10.0",
-    "grpc": "^1.24.3"
+    "@grpc/proto-loader": "^0.5.5",
+    "@types/google-protobuf": "^3.7.2",
+    "google-protobuf": "^4.0.0-rc.2",
+    "grpc": "^1.24.3",
+    "uuid": "^8.2.0"
   },
   "devDependencies": {
-    "@improbable-eng/grpc-web-node-http-transport": "^0.13.0",
-    "@types/google-protobuf": "^3.7.2",
     "@types/jest": "^26.0.5",
     "@types/uuid": "^8.0.0",
     "@typescript-eslint/eslint-plugin": "^3.7.0",
     "@typescript-eslint/parser": "^3.7.0",
     "eslint": "^7.5.0",
     "grpc-tools": "^1.9.1",
+    "grpc_tools_node_protoc_ts": "^4.1.0",
     "jest": "^26.1.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.5",
     "ts-jest": "^26.1.3",
-    "ts-protoc-gen": "^0.12.0",
-    "typescript": "^3.9.7",
-    "uuid": "^8.2.0"
+    "typescript": "^3.9.7"
   }
 }
