--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "lint:prettier": "prettier --check \"src/**/**/!(*.d).{ts,json}\"",
     "lint:eslint": "eslint \"src/**/*.ts\"",
     "test": "jest",
-    "generate": "./scripts/build-protos.sh",
+    "generate": "run-s generate:*",
+    "generate:folder": "make-dir ./generated",
+    "generate:js": "grpc_tools_node_protoc ./protos/*.proto --proto_path=./protos --grpc_out=./generated --js_out=import_style=commonjs,binary:./generated --ts_out=./generated",
     "clean": "rm -rf ./dist"
   },
   "files": [
@@ -51,6 +53,7 @@
     "grpc-tools": "^1.9.1",
     "grpc_tools_node_protoc_ts": "^4.1.0",
     "jest": "^26.1.0",
+    "make-dir-cli": "^2.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.5",
     "ts-jest": "^26.1.3",
