Add example snippet in README.md.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@eventstore/client",
+  "name": "@eventstore/db-client",
   "version": "1.0.0",
   "description": "NodeJS EventStoreDB version 20+ and uses gRPC as the communication protocol.",
   "main": "./dist/index.js",
