--- a/package.json
+++ b/package.json
@@ -49,7 +49,9 @@
     "@types/uuid": "^8.0.0",
     "@typescript-eslint/eslint-plugin": "^3.7.0",
     "@typescript-eslint/parser": "^3.7.0",
+    "docker-compose": "^0.23.5",
     "eslint": "^7.5.0",
+    "get-port": "^5.1.1",
     "grpc-tools": "^1.9.1",
     "grpc_tools_node_protoc_ts": "^4.1.0",
     "jest": "^26.1.0",
@@ -57,6 +59,7 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.5",
     "ts-jest": "^26.1.3",
-    "typescript": "^3.9.7"
+    "typescript": "^3.9.7",
+    "yaml": "^1.10.0"
   }
 }
