--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint:prettier": "prettier --check \"src/**/**/!(*.d).{ts,json}\"",
     "lint:eslint": "eslint \"src/**/*.ts\"",
     "test": "jest",
+    "test:ci": "cross-env EVENTSTORE_VERSION=ci jest",
+    "test:20.6.0": "cross-env EVENTSTORE_VERSION=20.6.0-bionic jest",
     "generate": "run-s generate:*",
     "generate:folder": "make-dir ./generated",
     "generate:js": "grpc_tools_node_protoc ./protos/*.proto --proto_path=./protos --grpc_out=./generated --js_out=import_style=commonjs,binary:./generated --ts_out=./generated",
@@ -49,6 +51,7 @@
     "@types/uuid": "^8.0.0",
     "@typescript-eslint/eslint-plugin": "^3.7.0",
     "@typescript-eslint/parser": "^3.7.0",
+    "cross-env": "^7.0.2",
     "docker-compose": "^0.23.5",
     "eslint": "^7.5.0",
     "get-port": "^5.1.1",
