--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test:20.6.0": "cross-env EVENTSTORE_VERSION=20.6.0-bionic jest",
     "generate": "run-s generate:*",
     "generate:folder": "make-dir ./generated",
-    "generate:js": "grpc_tools_node_protoc ./protos/*.proto --proto_path=./protos --grpc_out=./generated --js_out=import_style=commonjs,binary:./generated --ts_out=./generated",
+    "generate:js": "grpc_tools_node_protoc ./protos/*.proto --proto_path=./protos --grpc_out=grpc_js:./generated --js_out=import_style=commonjs,binary:./generated --ts_out=generate_package_definition:./generated",
     "clean": "rm -rf ./dist"
   },
   "files": [
@@ -39,13 +39,12 @@
     "preset": "ts-jest"
   },
   "dependencies": {
-    "@grpc/proto-loader": "^0.5.5",
-    "@types/google-protobuf": "^3.7.2",
-    "google-protobuf": "^4.0.0-rc.2",
-    "grpc": "^1.24.3",
+    "@grpc/grpc-js": "^1.1.5",
+    "google-protobuf": "^3.13.0",
     "uuid": "^8.2.0"
   },
   "devDependencies": {
+    "@types/google-protobuf": "^3.7.3",
     "@types/jest": "^26.0.5",
     "@types/uuid": "^8.0.0",
     "@typescript-eslint/eslint-plugin": "^3.7.0",
@@ -55,13 +54,13 @@
     "eslint": "^7.5.0",
     "get-port": "^5.1.1",
     "grpc-tools": "^1.9.1",
-    "grpc_tools_node_protoc_ts": "^4.1.0",
+    "grpc_tools_node_protoc_ts": "^4.1.4",
     "jest": "^26.1.0",
     "make-dir-cli": "^2.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.5",
-    "ts-jest": "^26.1.3",
-    "typescript": "^3.9.7",
+    "ts-jest": "^26.3.0",
+    "typescript": "^4.0.2",
     "yaml": "^1.10.0"
   }
 }
