--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test": "jest",
     "test:ci": "cross-env EVENTSTORE_IMAGE=github:ci jest",
     "generate": "run-s generate:*",
-    "generate:replace": "replace 'int64 ([A-z_]*) = ([0-9]*);' 'int64 $1 = $2 [jstype = JS_STRING];' ./protos/*.proto --silent",
+    "generate:replace": "replace \"int64 ([A-z_]*) = ([0-9]*);\" \"int64 \\$1 = \\$2 [jstype = JS_STRING];\" ./protos -r --silent --include=\"*.proto\"",
     "generate:folder": "make-dir ./generated",
     "generate:js": "grpc_tools_node_protoc ./protos/*.proto --proto_path=./protos --grpc_out=grpc_js:./generated --js_out=import_style=commonjs,binary:./generated --ts_out=generate_package_definition:./generated",
     "clean": "rm -rf ./dist"
