Use environment variable to set docker image - rename env variable to EVENTSTORE_IMAGE - Add `github:` and `local:` prefix - Return reading the env variable to cluster creation - Remove 20.6.0 from target 	- wasn't actually being tested against 	- wasn't a target version to support

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
     name: Test
     strategy:
       matrix:
-        version: [ci, "20.6.0"]
+        version: [ci]
     needs: build
     runs-on: ubuntu-18.04
     steps:
