--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "lint:prettier": "prettier --check \"src/**/**/!(*.d).{ts,json}\"",
     "lint:eslint": "eslint \"src/**/*.ts\"",
     "test": "jest",
-    "test:ci": "cross-env EVENTSTORE_VERSION=ci jest",
-    "test:20.6.0": "cross-env EVENTSTORE_VERSION=20.6.0-bionic jest",
+    "test:ci": "cross-env EVENTSTORE_IMAGE=github:ci jest",
     "generate": "run-s generate:*",
     "generate:folder": "make-dir ./generated",
     "generate:js": "grpc_tools_node_protoc ./protos/*.proto --proto_path=./protos --grpc_out=grpc_js:./generated --js_out=import_style=commonjs,binary:./generated --ts_out=generate_package_definition:./generated",
