--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint:eslint": "eslint \"src/**/*.ts\"",
     "test": "jest",
     "test:ci": "cross-env EVENTSTORE_IMAGE=github:ci jest",
+    "test:latest": "cross-env EVENTSTORE_IMAGE=eventstore/eventstore:latest jest",
     "generate": "run-s generate:*",
     "generate:sed": "shx sed -i \"s/int64 ([A-z_]*) = ([0-9]*);/int64 \\$1 = \\$2 [jstype = JS_STRING];/g\" ./protos/*",
     "generate:folder": "shx mkdir -p ./generated",
@@ -39,6 +40,7 @@
   "homepage": "https://github.com/EventStore/EventStore-Client-NodeJS#readme",
   "jest": {
     "preset": "ts-jest",
+    "globalSetup": "./src/__test__/utils/preflight.ts",
     "globals": {
       "ts-jest": {
         "tsConfig": "./src/__test__/tsconfig.json"
