Docker images - Set tests to use latest dockerhub image by default - Have CI run against latest, github CI, and 20.6.1 versions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
     name: Test
     strategy:
       matrix:
-        version: [ci]
+        version: [ci, latest, 20.6.1-buster-slim, 20.6.1-bionic]
     needs: build
     runs-on: ubuntu-18.04
     steps:
