--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "lint:eslint": "eslint \"src/**/*.ts\"",
     "test": "jest",
     "test:ci": "cross-env EVENTSTORE_IMAGE=github:ci jest",
+    "test:latest": "cross-env EVENTSTORE_IMAGE=eventstore/eventstore:latest jest",
+    "test:20.6.1-buster-slim": "cross-env EVENTSTORE_IMAGE=eventstore/eventstore:20.6.1-buster-slim jest",
+    "test:20.6.1-bionic": "cross-env EVENTSTORE_IMAGE=eventstore/eventstore:20.6.1-bionic jest",
     "generate": "run-s generate:*",
     "generate:sed": "shx sed -i \"s/int64 ([A-z_]*) = ([0-9]*);/int64 \\$1 = \\$2 [jstype = JS_STRING];/g\" ./protos/*",
     "generate:folder": "shx mkdir -p ./generated",
