--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint:prettier": "prettier --check \"src/**/**/!(*.d).{ts,json}\"",
     "lint:eslint": "eslint \"src/**/*.ts\"",
     "test": "jest",
+    "test:debug": "yarn cross-env NODE_OPTIONS=\"--no-deprecation\" DEBUG=\"esdb:*\" jest --verbose --run-in-band",
     "test:ci": "cross-env EVENTSTORE_IMAGE=github:ci jest",
     "test:latest": "cross-env EVENTSTORE_IMAGE=eventstore/eventstore:latest jest",
     "generate": "run-s generate:*",
@@ -49,10 +50,12 @@
   },
   "dependencies": {
     "@grpc/grpc-js": "^1.1.5",
+    "debug": "^4.2.0",
     "google-protobuf": "^3.13.0",
     "uuid": "^8.2.0"
   },
   "devDependencies": {
+    "@types/debug": "^4.1.5",
     "@types/google-protobuf": "^3.7.3",
     "@types/jest": "^26.0.5",
     "@types/uuid": "^8.0.0",
