Projections API - Add projections api - Add projections api tests - Add ability to open cluster in browser from test (for debug) - Move responsibility of `noUnusedLocals` to typescript (from eslint)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "target": "ES2019",
     "declaration": true,
     "strict": true,
+    "noUnusedLocals": true,
     "outDir": "./dist"
   },
   "include": ["./src", "./generated"],
