test utils accidentally being included in package

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,5 @@
     "outDir": "./dist"
   },
   "include": ["./src", "./generated"],
-  "exclude": ["**/*.test.ts"]
+  "exclude": ["**/*.test.ts", "**/__test__/**/*"]
 }
