--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,13 @@ jobs:
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v1
+      - name: Connect to tailscale
+        run: |
+          curl -fsSL https://pkgs.tailscale.com/stable/ubuntu/eoan.gpg | sudo apt-key add -
+          curl -fsSL https://pkgs.tailscale.com/stable/ubuntu/eoan.list | sudo tee /etc/apt/sources.list.d/tailscale.list
+          sudo apt-get update
+          sudo apt-get install tailscale
+          sudo tailscale up --authkey ${{ secrets.TAILSCALE_AUTH }} --hostname "node-client-ci-$(date +'%Y-%m-%dT%H:%M:%S')" --accept-routes
       # Install up to date version of node
       - name: Setup Node
         uses: actions/setup-node@v1
@@ -48,6 +55,10 @@ jobs:
         run: yarn
       - name: Run Tests
         run: yarn test:${{ matrix.version }} --ci
+        env:
+          EVENTSTORE_CLOUD_ID: ${{ secrets.EVENTSTORE_CLOUD_ID }}
+      - name: Disconnect from tailscale
+        run: sudo tailscale down
 
   linting:
     name: Linting
