--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@typescript-eslint/parser": "^3.7.0",
     "cross-env": "^7.0.2",
     "docker-compose": "^0.23.5",
+    "dotenv": "^8.2.0",
     "eslint": "^7.5.0",
     "get-port": "^5.1.1",
     "grpc-tools": "^1.9.1",
