--- a/package.json
+++ b/package.json
@@ -44,6 +44,9 @@
     "url": "https://github.com/EventStore/EventStore-Client-NodeJS/issues"
   },
   "homepage": "https://github.com/EventStore/EventStore-Client-NodeJS#readme",
+  "engines": {
+    "node": "^12.18.3 || >=14"
+  },
   "jest": {
     "preset": "ts-jest",
     "globalSetup": "./src/__test__/utils/preflight.ts",
@@ -56,6 +59,7 @@
   "dependencies": {
     "@grpc/grpc-js": "^1.1.5",
     "@types/debug": "^4.1.5",
+    "@types/node": "^12.12.47",
     "debug": "^4.2.0",
     "google-protobuf": "^3.13.0",
     "uuid": "^8.2.0"
