Enable code coverage in jest - set jest config to show - prevent a few files from being checked, to reduce noise

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,7 +58,7 @@ jobs:
       - name: Install
         run: yarn
       - name: Run Tests
-        run: yarn test:${{ matrix.version }} --ci
+        run: yarn test:${{ matrix.version }} --ci --coverage
         env:
           EVENTSTORE_CLOUD_ID: ${{ secrets.EVENTSTORE_CLOUD_ID }}
       - name: Disconnect from tailscale
