--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@eventstore/db-client",
-  "version": "0.0.0-alpha.17",
+  "version": "1.0.0",
   "description": "NodeJS EventStoreDB version 20+ and uses gRPC as the communication protocol.",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
