Update protos to latest - add extra sed for adding JS_STRING to deprecated uint64 - generate code - update streamname -> streamName

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "test:latest": "cross-env EVENTSTORE_IMAGE=eventstore/eventstore:latest jest",
     "test:flake": "jest --testSequencer=./src/__test__/utils/FlakeFinder.js",
     "generate": "run-s generate:*",
-    "generate:sed": "shx sed -i \"s/int64 ([A-z_]*) = ([0-9]*);/int64 \\$1 = \\$2 [jstype = JS_STRING];/g\" ./protos/*",
+    "generate:sed-append": "shx sed -i \"s/int64 ([A-z_]*) = ([0-9]*) \\[deprecated = true\\];/int64 \\$1 = \\$2 [deprecated = true, jstype = JS_STRING];/g\" ./protos/*",
+    "generate:sed-insert": "shx sed -i \"s/int64 ([A-z_]*) = ([0-9]*);/int64 \\$1 = \\$2 [jstype = JS_STRING];/g\" ./protos/*",
     "generate:folder": "shx mkdir -p ./generated",
     "generate:js": "grpc_tools_node_protoc ./protos/*.proto --proto_path=./protos --grpc_out=grpc_js:./generated --js_out=import_style=commonjs,binary:./generated --ts_out=generate_package_definition:./generated",
     "clean": "run-s clean:*",
