--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "declaration": true,
     "strict": true,
     "noUnusedLocals": true,
+    "useUnknownInCatchVariables": false,
     "outDir": "./dist"
   },
   "include": ["./src", "./generated"],
