--- a/.github/workflows/test_previous_LTS.yml
+++ b/.github/workflows/test_previous_LTS.yml
@@ -1,4 +1,4 @@
-name: "21.10"
+name: "previous LTS"
 
 on:
   pull_request:
@@ -13,7 +13,7 @@ jobs:
     name: Test
     uses: EventStore/EventStore-Client-NodeJS/.github/workflows/tests.yml@master
     with:
-      version: "21.10.0-buster-slim"
+      version: "20.10.5-focal"
     secrets:
       eventstore_cloud_id: ${{ secrets.EVENTSTORE_CLOUD_ID }}
       tailscale_auth: ${{ secrets.TAILSCALE_AUTH }}
