getPersistenSubscriptionInfo and getPersistendSubscriptionToAllInfo - Add getPersistenSubscriptionInfo and getPersistendSubscriptionToAllInfo methods - Add HTTP polyfill for getPersistenSubscriptionInfo - Match consumer strategy names with server counterparts, log a deprecation warning when previous strings are used.

--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "test": "jest",
     "test:debug": "yarn cross-env NODE_OPTIONS=\"--no-deprecation\" DEBUG=\"esdb:*\" DEBUG_DEPTH=6 DEBUG_COLORS=\"true\" jest --verbose --run-in-band",
     "test:flake": "jest --testSequencer=./src/__test__/utils/FlakeFinder.js",
+    "21.10": "yarn cross-env EVENTSTORE_IMAGE=github:21.10.1-focal jest",
+    "20.10": "yarn cross-env EVENTSTORE_IMAGE=github:20.10.4-focal jest",
     "generate": "run-s generate:*",
     "generate:sed-append": "shx sed -i \"s/int64 ([A-z_]*) = ([0-9]*) \\[deprecated = true\\];/int64 \\$1 = \\$2 [deprecated = true, jstype = JS_STRING];/g\" ./protos/*",
     "generate:sed-insert": "shx sed -i \"s/int64 ([A-z_]*) = ([0-9]*);/int64 \\$1 = \\$2 [jstype = JS_STRING];/g\" ./protos/*",
