--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "strict": true,
     "noUnusedLocals": true,
     "useUnknownInCatchVariables": false,
+    "importsNotUsedAsValues": "error",
     "outDir": "./dist"
   },
   "include": ["./src", "./generated"],
