--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     ]
   },
   "dependencies": {
-    "@grpc/grpc-js": "^1.4.5",
+    "@grpc/grpc-js": "1.9.0",
     "@types/debug": "^4.1.7",
     "@types/google-protobuf": "^3.15.5",
     "@types/node": "^16.11.4",
