Throw InvalidArgumentError for runtime validation errors

--- a/.github/workflows/test_dispatch.yml
+++ b/.github/workflows/test_dispatch.yml
@@ -1,14 +1,10 @@
-name: 'Dispatch'
+name: "Dispatch"
 
 on:
   workflow_dispatch:
     inputs:
-      cloud_version:
-        description: 'EventStoreDB server tag'
-        required: true
-        type: string
-      esdb_version:
-        description: 'EventStoreDB cloud version tag'
+      version:
+        description: "Version tag"
         required: true
         type: string
 
@@ -17,8 +13,7 @@ jobs:
     name: Test
     uses: ./.github/workflows/tests.yml
     with:
-      esdb_version: ${{ inputs.esdb_version }}
-      cloud_version: ${{ inputs.cloud_version }}
+      version: ${{ inputs.version }}
     secrets:
       eventstore_cloud_id: ${{ secrets.EVENTSTORE_CLOUD_ID }}
       tailscale_auth: ${{ secrets.TAILSCALE_AUTH }}
