--- a/.github/workflows/test_next.yml
+++ b/.github/workflows/test_next.yml
@@ -13,8 +13,7 @@ jobs:
     name: Test
     uses: ./.github/workflows/tests.yml
     with:
-      cloud_version: "ci"
-      esdb_version: "ci"
+      version: "ci"
     secrets:
       eventstore_cloud_id: ${{ secrets.EVENTSTORE_CLOUD_ID }}
       tailscale_auth: ${{ secrets.TAILSCALE_AUTH }}
