--- a/.github/workflows/test_previous_LTS.yml
+++ b/.github/workflows/test_previous_LTS.yml
@@ -1,4 +1,4 @@
-name: 'previous LTS'
+name: "previous LTS"
 
 on:
   pull_request:
@@ -6,15 +6,14 @@ on:
     branches:
       - master
   schedule:
-    - cron: '0 3 * * 0' # Every sunday at 3am UTC.
+    - cron: "0 3 * * 0" # Every sunday at 3am UTC.
 
 jobs:
   test:
     name: Test
     uses: ./.github/workflows/tests.yml
     with:
-      cloud_version: '20.10.5-focal'
-      esdb_version: '20.10.5-focal'
+      version: "20.10.5-focal"
     secrets:
       eventstore_cloud_id: ${{ secrets.EVENTSTORE_CLOUD_ID }}
       tailscale_auth: ${{ secrets.TAILSCALE_AUTH }}
