--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     ]
   },
   "dependencies": {
-    "@grpc/grpc-js": "1.9.0",
+    "@grpc/grpc-js": "^1.9.12",
     "@types/debug": "^4.1.12",
     "@types/google-protobuf": "^3.15.12",
     "@types/node": "^16.18.67",
