--- a/.github/workflows/test_previous_LTS.yml
+++ b/.github/workflows/test_previous_LTS.yml
@@ -13,7 +13,7 @@ jobs:
     name: Test
     uses: ./.github/workflows/tests.yml
     with:
-      version: "20.10.5-focal"
+      version: "previous-lts"
     secrets:
       eventstore_cloud_id: ${{ secrets.EVENTSTORE_CLOUD_ID }}
       tailscale_auth: ${{ secrets.TAILSCALE_AUTH }}
