--- a/.github/workflows/test_ee.yml
+++ b/.github/workflows/test_ee.yml
@@ -1,16 +1,12 @@
-name: tests workflow
+name: "EE"
 
 on:
-  workflow_call:
-    inputs:
-      version:
-        required: true
-        type: string
-    secrets:
-      eventstore_cloud_id:
-        required: false
-      tailscale_auth:
-        required: false
+  pull_request:
+  push:
+    branches:
+      - master
+  schedule:
+    - cron: "0 * * * 0" # Every day at 3am UTC.
 
 jobs:
   tests:
@@ -19,28 +15,13 @@ jobs:
       fail-fast: false
       matrix:
         group:
-          - name: samples
-            path: ./samples
+          - name: plugins
+            path: ./src/__test__/plugins
             tailscale: true
-
-          - name: connection
-            path: ./src/__test__/connection
-            tailscale: true
-
-          - name: extra
-            path: ./src/__test__/extra
-
-          - name: persistentSubscription
-            path: ./src/__test__/persistentSubscription
-
-          - name: projections
-            path: ./src/__test__/projections
-
-          - name: streams
-            path: ./src/__test__/streams
     env:
       # Github only passes secrets to the main repo, so we need to skip some things if they are unavailable
-      SECRETS_AVAILABLE: ${{ secrets.eventstore_cloud_id != null }}
+      SECRETS_AVAILABLE: ${{ secrets.EVENTSTORE_CLOUD_ID != null }}
+      EVENTSTORE_VERSION: "24.2.0-jammy"
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -51,18 +32,24 @@ jobs:
           curl -fsSL https://pkgs.tailscale.com/stable/ubuntu/eoan.list | sudo tee /etc/apt/sources.list.d/tailscale.list
           sudo apt-get update
           sudo apt-get install tailscale
-          sudo tailscale up --authkey ${{ secrets.tailscale_auth }} --hostname "node-client-ci-${{ inputs.version }}-$(date +'%Y-%m-%d-%H-%M-%S')" --advertise-tags=tag:ci --accept-routes
+          sudo tailscale up --authkey ${{ secrets.TAILSCALE_AUTH }} --hostname "node-client-ci-${{ env.EVENTSTORE_VERSION }}-$(date +'%Y-%m-%d-%H-%M-%S')" --advertise-tags=tag:ci --accept-routes
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
           node-version: "14.x"
+      - name: Login to Cloudsmith
+        uses: docker/login-action@v3
+        with:
+          registry: docker.eventstore.com
+          username: ${{ secrets.CLOUDSMITH_CICD_USER }}
+          password: ${{ secrets.CLOUDSMITH_CICD_TOKEN }}
       - name: Install
         run: yarn
       - name: Run Tests
         run: yarn test ${{ matrix.group.path }} --ci --run-in-band --forceExit
         env:
-          EVENTSTORE_IMAGE: github:${{ inputs.version }}
-          EVENTSTORE_CLOUD_ID: ${{ secrets.eventstore_cloud_id }}
+          EVENTSTORE_IMAGE: eventstore-ee:${{ env.EVENTSTORE_VERSION }}
+          EVENTSTORE_CLOUD_ID: ${{ secrets.EVENTSTORE_CLOUD_ID }}
       - name: Disconnect from tailscale
         if: ${{ always() && matrix.group.tailscale && env.SECRETS_AVAILABLE == 'true' }}
         run: sudo tailscale down
