--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "build": "lerna run --stream build",
     "build:ts": "lerna run --stream build:ts",
-    "build:watch": "lerna run --stream build:watch",
+    "build:watch": "lerna run build:watch --parallel",
     "lint": "run-s -c lint:*",
     "lint:prettier": "prettier --check \"packages/*/src/**/**/!(*.d).{ts,json}\"",
     "lint:eslint": "eslint \"packages/*/src/**/*.ts\"",
@@ -24,6 +24,7 @@
     "@types/node": "^16.18.67",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
+    "cross-env": "^7.0.3",
     "eslint": "^7.32.0",
     "eslint-plugin-tsdoc": "^0.2.17",
     "lerna": "^6.6.2",
