--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -43,7 +43,7 @@ jobs:
       SECRETS_AVAILABLE: ${{ secrets.eventstore_cloud_id != null }}
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Connect to tailscale
         if: ${{ matrix.group.tailscale && env.SECRETS_AVAILABLE == 'true' }}
         run: |
@@ -52,10 +52,11 @@ jobs:
           sudo apt-get update
           sudo apt-get install tailscale
           sudo tailscale up --authkey ${{ secrets.tailscale_auth }} --hostname "node-client-ci-${{ inputs.version }}-$(date +'%Y-%m-%d-%H-%M-%S')" --advertise-tags=tag:ci --accept-routes
-      - name: Setup Node
-        uses: actions/setup-node@v3
+      - uses: actions/setup-node@v4
         with:
-          node-version: "14.x"
+          node-version-file: .github/files/.nvmrc
+      - name: NodeJS version
+        run: node -v
       - name: Install
         run: yarn
       - name: Run Tests
