--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "prettier:fix": "prettier --write \"packages/*/src/**/**/!(*.d).{ts,json}\"",
     "clean": "lerna run --stream clean",
     "prepublishOnly": "run-s clean build test",
-    "test": "lerna run --stream test --"
+    "test": "lerna run --stream test --",
+    "postinstall": "yarn build"
   },
   "author": "Event Store Limited",
   "license": "Apache-2.0",
