--- a/packages/opentelemetry/package.json
+++ b/packages/opentelemetry/package.json
@@ -33,16 +33,10 @@
   },
   "dependencies": {
     "@opentelemetry/api": "^1.8.0",
-    "@opentelemetry/instrumentation": "^0.50.0",
-    "@opentelemetry/sdk-node": "^0.50.0",
-    "@opentelemetry/semantic-conventions": "^1.23.0"
+    "@opentelemetry/instrumentation": "^0.50.0"
   },
   "devDependencies": {
-    "@eventstore/db-client": "*",
-    "@opentelemetry/context-async-hooks": "^1.23.0",
-    "@opentelemetry/core": "^1.23.0",
-    "@opentelemetry/sdk-trace-base": "^1.23.0",
-    "@opentelemetry/sdk-trace-node": "^1.23.0"
+    "@eventstore/db-client": "*"
   },
   "peerDependencies": {
     "@eventstore/db-client": "^6"
