Tests are now run using node LTS

--- a/.github/workflows/test_ee.yml
+++ b/.github/workflows/test_ee.yml
@@ -24,7 +24,7 @@ jobs:
       EVENTSTORE_VERSION: "24.2.0-jammy"
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Connect to tailscale
         if: ${{ matrix.group.tailscale && env.SECRETS_AVAILABLE == 'true' }}
         run: |
@@ -33,10 +33,11 @@ jobs:
           sudo apt-get update
           sudo apt-get install tailscale
           sudo tailscale up --authkey ${{ secrets.TAILSCALE_AUTH }} --hostname "node-client-ci-${{ env.EVENTSTORE_VERSION }}-$(date +'%Y-%m-%d-%H-%M-%S')" --advertise-tags=tag:ci --accept-routes
-      - name: Setup Node
-        uses: actions/setup-node@v3
+      - uses: actions/setup-node@v4
         with:
-          node-version: "14.x"
+          node-version-file: .github/files/.nvmrc
+      - name: NodeJS version
+        run: node -v
       - name: Login to Cloudsmith
         uses: docker/login-action@v3
         with:
