--- a/.github/workflows/test_ee.yml
+++ b/.github/workflows/test_ee.yml
@@ -17,7 +17,7 @@ jobs:
         group:
           - name: plugins
             path: ./src/plugins
-            tailscale: true
+            tailscale: false
     env:
       # Github only passes secrets to the main repo, so we need to skip some things if they are unavailable
       SECRETS_AVAILABLE: ${{ secrets.EVENTSTORE_CLOUD_ID != null }}
