--- a/package.json
+++ b/package.json
@@ -2,17 +2,17 @@
   "name": "kurrent-node-client-repository",
   "private": true,
   "scripts": {
-    "build": "lerna run --stream build",
-    "build:ts": "lerna run --stream build:ts",
-    "build:watch": "lerna run build:watch --parallel",
+    "build": "npm run build --workspaces",
+    "build:ts": "npm run build:ts --workspaces",
+    "build:watch": "npm run build:watch --workspaces --parallel",
     "lint": "run-s -c lint:*",
     "lint:prettier": "prettier --check \"packages/*/src/**/**/!(*.d).{ts,json}\"",
     "lint:eslint": "eslint \"packages/*/src/**/*.ts\"",
     "prettier:fix": "prettier --write \"packages/*/src/**/**/!(*.d).{ts,json}\"",
-    "clean": "lerna run --stream clean",
+    "clean": "npm run clean --workspaces",
     "prepublishOnly": "run-s clean build test",
-    "test": "lerna run --stream test --",
-    "postinstall": "yarn build"
+    "test": "npm run test --workspaces --if-present",
+    "postinstall": "npm run build --workspaces"
   },
   "author": "Event Store Limited",
   "license": "Apache-2.0",
@@ -28,7 +28,6 @@
     "cross-env": "^7.0.3",
     "eslint": "^7.32.0",
     "eslint-plugin-tsdoc": "^0.2.17",
-    "lerna": "^6.6.2",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.4.1",
     "typescript": "^4.9.5"
